gitops/dev/demo-app/values-specific.yaml
service:
  nodePort: 30103

keptn:
  appContext:
    preDeploymentTasks:
    - maintenance-window-check
    postDeploymentTasks:
      - load-test
    postDeploymentEvaluations:
      - demoapp-heatlh-check
    promotionTasks:
      - promote
