exercises/01-keptn-tasks/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: maintenance-window-check
spec:
  steps:
  - try:
    - apply:
        resource:
          apiVersion: argoproj.io/v1alpha1
          kind: Application
          metadata:
            name: demo-app-test
            namespace: argocd
            annotations:
              argocd.argoproj.io/sync-wave: '10'
            finalizers:
              - resources-finalizer.argocd.argoproj.io
          spec:
            project: default
            source:
              path: charts/demo-app
              repoURL: https://github.com/heckelmann/kyverno-keptn-workshop
              targetRevision: main
              helm:
                valueFiles:
                  - ../../gitops/dev/demo-app/values.yaml
                  - ../../gitops/dev/demo-app/values-specific.yaml
                parameters:
                  - name: commitID
                    value: $ARGOCD_APP_REVISION
                  - name: serviceVersion
                    value: v1
                  - name: service.nodePort
                    value: '31106'
            destination:
              server: https://kubernetes.default.svc
              namespace: ($namespace)
            syncPolicy:
              automated:
                prune: true
                selfHeal: true
    - assert:
        timeout: 10m
        resource:
          apiVersion: argoproj.io/v1alpha1
          kind: Application
          metadata:
            name: demo-app-test
            namespace: argocd
          status:
            health:
              status: Healthy
            sync:
              status: Synced
    - assert:
        timeout: 1m
        resource:
          apiVersion: lifecycle.keptn.sh/v1
          kind: KeptnApp
          metadata:
            name: demo-app

    # - delete:
    #     ref:
    #       apiVersion: lifecycle.keptn.sh/v1
    #       kind: KeptnApp
    #       name: demo-app
    # - delete:
    #     ref:
    #       apiVersion: apps/v1
    #       kind: Deployment
    #       name: demo-app
    # - assert:
    #     timeout: 1m
    #     resource:
    #       apiVersion: lifecycle.keptn.sh/v1
    #       kind: KeptnApp
    #       metadata:
    #         name: demo-app
    # - assert:
    #     resource:
    #       apiVersion: lifecycle.keptn.sh/v1
    #       kind: KeptnTask
    #       spec:
    #         checkType: pre
    #         context:
    #           appName: demo-app
    #           appVersion: v1
    #           objectType: App
    #           taskType: pre
    #           workloadName: ""
    #         taskDefinition: maintenance-window-check
    #       status:
    #         status: Succeeded
